--- a/index.css
+++ b/index.css
@@ -4,18 +4,18 @@
 }
 
 body{
-    max-width: 1720px;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
+
 
 #menuPrincipal{
     display: flex;
-    width: auto;
+    background: #2a2a2a;
+    justify-content: space-between;
+    align-items: center;
     height: 80px;
-    padding: 15px 20px;
-
-    background: #2f4f4f;
-    justify-content: space-around;
+    padding: 15px 80px;
 
 }
 
@@ -39,7 +39,6 @@ a{
 .tela{
     background: lightgray;
     width: auto;
-    height: 500px;
 }
 
 .informativo{
@@ -56,13 +55,15 @@ a{
 }
 
 footer{
+    height: 30px;
     font-size: 12px;
     text-align: center;
+    align-content: center;
 }
 
 .fotoinfo{
     width: 600px;
-    height:200px;
+    height:300px;
 }
 
 .telao{
@@ -70,3 +71,81 @@ footer{
     padding: 100px 150px;
     display: flex;
 }
+
+.molder{
+    margin: 30px 100px;
+}
+
+#foto2{
+    width: 280px;
+    height: 175px;
+    margin-bottom: 10px;
+}
+
+
+.separador{
+    display: flex;
+    justify-content: center;
+}
+
+.separar{
+    width: 320px;
+    padding: 0 30px;
+}
+
+.fundo{
+    color: white;
+    background: #2f2f2f;
+    display: flex;
+    justify-content: space-around;
+    padding: 30px 150px;
+
+}
+
+.parte{
+    padding: 0 20px;
+    width: 450px;
+    
+}
+
+
+.data{
+    width: 50px;
+    height: 50px;
+
+    color: black;
+    background: white;
+    border: 1px solid black;
+    border-radius: 8px;
+    text-align: center;
+    padding: 8px 8px;
+}
+
+.icon{
+    width: 20px;
+    height: 20px;
+}
+
+.englobo{
+    display: flex;
+    margin: 0 10px;
+}
+
+.cont{
+    margin-left: 10px;
+}
+
+.midia{
+    display: flex;
+}
+
+.midia p{
+    padding: 0 5px;
+
+}
+
+@media only screen and (max-width: 1920px) {
+    .geral {
+        max-width: 1920px;
+        margin: 0 auto; /* Centraliza o conteúdo */
+    }}
